# deleted-kids

./: .gitignore  pyproject.toml  story_compiler.py
backstage/: audio_generator.py  audio_integrator.py  firebase_storage.py  interaction_bots.json  prompts.py  schema.py  voicebot_schema.py
demo/: AudioPlayer.py  ExerciseManager.py  InteractionBot.py  PronunciationRecognizer.py  SpeechAnalysis.py  SpeechRecognizer.py  StoryPlayer.py  audio_player.py  exercise_manager.py  interaction_bot.py  pronunciation.py  pronunciation_recognizer.py  story_player.py  terminal_demo.py
docs/: EXERCISE.md
models/: story_schema.py
stories/: interaction_bots.json
stories/se/: beginner-fika.json  intermediate-zlatan.json  intermediate-zlatan2.json
utils/: story_compiler.py  utils.py
