[tool.poetry]
name = "utter"
version = "0.1.0"
description = "backstage of the utter stories"
authors = ["Victor Oldensand <victormag24@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
elevenlabs = "^1.7.0"
firebase-admin = "^6.5.0"
numpy = "^2.1.0"
pydub = "^0.25.1"
pygame = "^2.6.0"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
transformers = "^4.44.1"
datasets = "^2.21.0"
sounddevice = "^0.5.0"
termcolor = "^2.4.0"


[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.5"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
